; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_ARB_imaging.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_ARB_imaging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_ARB_imaging = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"glBlendColor\00", align 1
@glad_glBlendColor = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"glBlendEquation\00", align 1
@glad_glBlendEquation = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [13 x i8] c"glColorTable\00", align 1
@glad_glColorTable = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [24 x i8] c"glColorTableParameterfv\00", align 1
@glad_glColorTableParameterfv = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [24 x i8] c"glColorTableParameteriv\00", align 1
@glad_glColorTableParameteriv = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [17 x i8] c"glCopyColorTable\00", align 1
@glad_glCopyColorTable = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [16 x i8] c"glGetColorTable\00", align 1
@glad_glGetColorTable = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [27 x i8] c"glGetColorTableParameterfv\00", align 1
@glad_glGetColorTableParameterfv = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [27 x i8] c"glGetColorTableParameteriv\00", align 1
@glad_glGetColorTableParameteriv = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [16 x i8] c"glColorSubTable\00", align 1
@glad_glColorSubTable = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [20 x i8] c"glCopyColorSubTable\00", align 1
@glad_glCopyColorSubTable = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [22 x i8] c"glConvolutionFilter1D\00", align 1
@glad_glConvolutionFilter1D = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [22 x i8] c"glConvolutionFilter2D\00", align 1
@glad_glConvolutionFilter2D = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [24 x i8] c"glConvolutionParameterf\00", align 1
@glad_glConvolutionParameterf = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [25 x i8] c"glConvolutionParameterfv\00", align 1
@glad_glConvolutionParameterfv = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [24 x i8] c"glConvolutionParameteri\00", align 1
@glad_glConvolutionParameteri = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [25 x i8] c"glConvolutionParameteriv\00", align 1
@glad_glConvolutionParameteriv = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [26 x i8] c"glCopyConvolutionFilter1D\00", align 1
@glad_glCopyConvolutionFilter1D = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [26 x i8] c"glCopyConvolutionFilter2D\00", align 1
@glad_glCopyConvolutionFilter2D = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [23 x i8] c"glGetConvolutionFilter\00", align 1
@glad_glGetConvolutionFilter = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [28 x i8] c"glGetConvolutionParameterfv\00", align 1
@glad_glGetConvolutionParameterfv = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [28 x i8] c"glGetConvolutionParameteriv\00", align 1
@glad_glGetConvolutionParameteriv = common dso_local global i64 0, align 8
@.str.22 = private unnamed_addr constant [21 x i8] c"glGetSeparableFilter\00", align 1
@glad_glGetSeparableFilter = common dso_local global i64 0, align 8
@.str.23 = private unnamed_addr constant [20 x i8] c"glSeparableFilter2D\00", align 1
@glad_glSeparableFilter2D = common dso_local global i64 0, align 8
@.str.24 = private unnamed_addr constant [15 x i8] c"glGetHistogram\00", align 1
@glad_glGetHistogram = common dso_local global i64 0, align 8
@.str.25 = private unnamed_addr constant [26 x i8] c"glGetHistogramParameterfv\00", align 1
@glad_glGetHistogramParameterfv = common dso_local global i64 0, align 8
@.str.26 = private unnamed_addr constant [26 x i8] c"glGetHistogramParameteriv\00", align 1
@glad_glGetHistogramParameteriv = common dso_local global i64 0, align 8
@.str.27 = private unnamed_addr constant [12 x i8] c"glGetMinmax\00", align 1
@glad_glGetMinmax = common dso_local global i64 0, align 8
@.str.28 = private unnamed_addr constant [23 x i8] c"glGetMinmaxParameterfv\00", align 1
@glad_glGetMinmaxParameterfv = common dso_local global i64 0, align 8
@.str.29 = private unnamed_addr constant [23 x i8] c"glGetMinmaxParameteriv\00", align 1
@glad_glGetMinmaxParameteriv = common dso_local global i64 0, align 8
@.str.30 = private unnamed_addr constant [12 x i8] c"glHistogram\00", align 1
@glad_glHistogram = common dso_local global i64 0, align 8
@.str.31 = private unnamed_addr constant [9 x i8] c"glMinmax\00", align 1
@glad_glMinmax = common dso_local global i64 0, align 8
@.str.32 = private unnamed_addr constant [17 x i8] c"glResetHistogram\00", align 1
@glad_glResetHistogram = common dso_local global i64 0, align 8
@.str.33 = private unnamed_addr constant [14 x i8] c"glResetMinmax\00", align 1
@glad_glResetMinmax = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_ARB_imaging to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_ARB_imaging(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_ARB_imaging, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %75

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glBlendColor, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glBlendEquation, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glColorTable, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glColorTableParameterfv, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glColorTableParameteriv, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glCopyColorTable, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glGetColorTable, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glGetColorTableParameterfv, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glGetColorTableParameteriv, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glColorSubTable, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glCopyColorSubTable, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glConvolutionFilter1D, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glConvolutionFilter2D, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glConvolutionParameterf, align 8
  %35 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %36 = call i64 %35(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.14, i64 0, i64 0))
  store i64 %36, i64* @glad_glConvolutionParameterfv, align 8
  %37 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %38 = call i64 %37(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.15, i64 0, i64 0))
  store i64 %38, i64* @glad_glConvolutionParameteri, align 8
  %39 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %40 = call i64 %39(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.16, i64 0, i64 0))
  store i64 %40, i64* @glad_glConvolutionParameteriv, align 8
  %41 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %42 = call i64 %41(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.17, i64 0, i64 0))
  store i64 %42, i64* @glad_glCopyConvolutionFilter1D, align 8
  %43 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %44 = call i64 %43(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.18, i64 0, i64 0))
  store i64 %44, i64* @glad_glCopyConvolutionFilter2D, align 8
  %45 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %46 = call i64 %45(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.19, i64 0, i64 0))
  store i64 %46, i64* @glad_glGetConvolutionFilter, align 8
  %47 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %48 = call i64 %47(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.20, i64 0, i64 0))
  store i64 %48, i64* @glad_glGetConvolutionParameterfv, align 8
  %49 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %50 = call i64 %49(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.21, i64 0, i64 0))
  store i64 %50, i64* @glad_glGetConvolutionParameteriv, align 8
  %51 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %52 = call i64 %51(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.22, i64 0, i64 0))
  store i64 %52, i64* @glad_glGetSeparableFilter, align 8
  %53 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %54 = call i64 %53(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.23, i64 0, i64 0))
  store i64 %54, i64* @glad_glSeparableFilter2D, align 8
  %55 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %56 = call i64 %55(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.24, i64 0, i64 0))
  store i64 %56, i64* @glad_glGetHistogram, align 8
  %57 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %58 = call i64 %57(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.25, i64 0, i64 0))
  store i64 %58, i64* @glad_glGetHistogramParameterfv, align 8
  %59 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %60 = call i64 %59(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.26, i64 0, i64 0))
  store i64 %60, i64* @glad_glGetHistogramParameteriv, align 8
  %61 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %62 = call i64 %61(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.27, i64 0, i64 0))
  store i64 %62, i64* @glad_glGetMinmax, align 8
  %63 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %64 = call i64 %63(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.28, i64 0, i64 0))
  store i64 %64, i64* @glad_glGetMinmaxParameterfv, align 8
  %65 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %66 = call i64 %65(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.29, i64 0, i64 0))
  store i64 %66, i64* @glad_glGetMinmaxParameteriv, align 8
  %67 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %68 = call i64 %67(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.30, i64 0, i64 0))
  store i64 %68, i64* @glad_glHistogram, align 8
  %69 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %70 = call i64 %69(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.31, i64 0, i64 0))
  store i64 %70, i64* @glad_glMinmax, align 8
  %71 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %72 = call i64 %71(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.32, i64 0, i64 0))
  store i64 %72, i64* @glad_glResetHistogram, align 8
  %73 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %74 = call i64 %73(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.33, i64 0, i64 0))
  store i64 %74, i64* @glad_glResetMinmax, align 8
  br label %75

75:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
